# udemy-crewai-sequential

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json
app/: database.py  main.py
app/models/: call_record.py  customer.py  ocr_card.py
app/routers/: customer.py  import_data.py  scoring.py
app/services/: llm_service.py
crewai/docs/: ARCHITECTURE.md  IMPLEMENTATION.md  INFRA.md  QA_REPORT.md  RDD.md  UI_DESIGN.md
crewai/src/sdlc_test/: crew.py  main.py
crewai/src/sdlc_test/config/: agents.yaml  tasks.yaml
crewai/src/sdlc_test/tools/: mcp_tool.py
data_import/: import_csv.py  import_excel.py  parse_ocr.py  seed.py
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  INFRA.md  QA_REPORT.md  RDD.md  UI_DESIGN.md
frontend/static/: styles.css
frontend/templates/: customer_detail.html  import.html  index.html
knowledge/: project_context.md
tests/: test_tools.py
