[project]
name = "sdlc_test"
version = "0.1.0"
description = "sdlc-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,google-genai,tools]==1.9.3",
    "crewai-tools[mcp]",
    "litellm>=1.75.3",
]

[project.scripts]
sdlc_test = "sdlc_test.main:run"
run_crew = "sdlc_test.main:run"
train = "sdlc_test.main:train"
replay = "sdlc_test.main:replay"
test = "sdlc_test.main:test"
run_with_trigger = "sdlc_test.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
